--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -36,6 +36,49 @@
             </ul>
         </div>
         <div class="content">
+            <div class="filter">
+                <p>Filtros</p>
+                <label>Situación de la marca</label>
+                <select class="form-select">
+                    <option selected>50</option>
+                    <option value="1">100</option>
+                    <option value="2">250</option>
+                    <option value="3">500</option>
+                </select>
+                <label>Número de clase</label>
+                <select class="form-select">
+                    <option selected>50</option>
+                    <option value="1">100</option>
+                    <option value="2">250</option>
+                    <option value="3">500</option>
+                </select>
+                <label>Teléfono</label>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio">
+                    <label class="form-check-label">
+                      Disponible
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio">
+                    <label class="form-check-label">
+                      No dispoible
+                    </label>
+                </div>
+                <label>Correo</label>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio">
+                    <label class="form-check-label">
+                      Disponible
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio">
+                    <label class="form-check-label">
+                      No dispoible
+                    </label>
+                </div>
+            </div>
             <table class="table">
                 <thead>
                   <tr>
