--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -38,19 +38,25 @@
         <div class="content">
             <div class="filter">
                 <p>Filtros</p>
-                <label>Situación de la marca</label>
+                <label class="option-filter-title">Situación de la marca</label>
                 <select class="form-select">
                     <% situacion.forEach(function(s) { %>
                         <option value=<%= s.situacion_marca %>><%= s.situacion_marca %></option>
                     <% }); %>
                 </select>
-                <label>Número de clase</label>
+                <label class="option-filter-title">Número de Clasificación</label>
+                <select class="form-select">
+                    <% clasificacion.forEach(function(c) { %>
+                        <option value=<%= c.clasificacion_niza %>><%= c.clasificacion_niza %></option>
+                    <% }); %>
+                </select>
+                <label class="option-filter-title">Número de clase</label>
                 <select class="form-select">
                     <% clase.forEach(function(c) { %>
                         <option value=<%= c.clase_marca %>><%= c.clase_marca %></option>
                     <% }); %>
                 </select>
-                <label>Teléfono</label>
+                <label class="option-filter-title">Teléfono</label>
                 <div class="form-check">
                     <input class="form-check-input" type="radio">
                     <label class="form-check-label">
@@ -63,7 +69,7 @@
                       No dispoible
                     </label>
                 </div>
-                <label>Correo</label>
+                <label class="option-filter-title">Correo</label>
                 <div class="form-check">
                     <input class="form-check-input" type="radio">
                     <label class="form-check-label">
