--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -16,20 +16,29 @@
         <div class="option">
             <div class="form-group">
                 <label>Número de filas</label>
-                <select class="form-select">
-                    <option selected>50</option>
-                    <option value="1">100</option>
-                    <option value="2">250</option>
-                    <option value="3">500</option>
+                <select class="form-select" id="size">
+                    <option value="50" selected>50</option>
+                    <option value="100">100</option>
+                    <option value="250">250</option>
+                    <option value="500">500</option>
                 </select>
             </div>
             <ul class="pagination">
-                <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-                </li>
-                <a class="page-link" href="#" aria-label="Next">
+                <% if(page == 1) { %>
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                <% }else{ %>
+                    <li class="page-item">
+                        <a class="page-link" href="/dashboard/<%= page - 1 %>/<%= size %>"  aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                <% } %>
+                <p hidden><%= page++%></p>
+                <a class="page-link" href="/dashboard/<%= page %>/<%= size %>" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
                 </li>
@@ -152,6 +161,7 @@
             <p>pie de página</p>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </body>
