--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,13 +15,31 @@
         </div>
         <div class="option">
             <div class="form-group">
-                <label>Número de filas</label>
-                <select class="form-select" id="size">
-                    <option value="50" selected>50</option>
-                    <option value="100">100</option>
-                    <option value="250">250</option>
-                    <option value="500">500</option>
-                </select>
+                <form action="" method="POST" id="size">
+                    <label>Número de filas</label>
+                    <select class="form-select" id="size" onchange="changeAction(this.value);">
+                        <% if(size == 50) { %>
+                            <option value="50" selected>50</option>
+                        <% }else{ %>
+                            <option value="50">50</option>
+                        <% } %>
+                        <% if(size == 100) { %>
+                            <option value="100" selected>100</option>
+                        <% }else{ %>
+                            <option value="100">100</option>
+                        <% } %>
+                        <% if(size == 250) { %>
+                            <option value="250" selected>250</option>
+                        <% }else{ %>
+                            <option value="250">250</option>
+                        <% } %>
+                        <% if(size == 500) { %>
+                            <option value="500" selected>500</option>
+                        <% }else{ %>
+                            <option value="500">500</option>
+                        <% } %>
+                    </select>
+                </form>
             </div>
             <ul class="pagination">
                 <% if(page == 1) { %>
@@ -162,6 +180,11 @@
         </div>
     </div>
 
+    <script>
+        
+    </script>
+    <script  type="text/javascript" src="/js/dashboard.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </body>
