--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -67,46 +67,37 @@
                 <p>Filtros</p>
                 <label class="option-filter-title">Situación de la marca</label>
                 <select class="form-select">
+                    <option value="1"></option>
                     <% situacion.forEach(function(s) { %>
                         <option value=<%= s.situacion_marca %>><%= s.situacion_marca %></option>
                     <% }); %>
                 </select>
                 <label class="option-filter-title">Número de Clasificación</label>
                 <select class="form-select">
+                    <option value="1"></option>
                     <% clasificacion.forEach(function(c) { %>
                         <option value=<%= c.clasificacion_niza %>><%= c.clasificacion_niza %></option>
                     <% }); %>
                 </select>
                 <label class="option-filter-title">Número de clase</label>
                 <select class="form-select">
+                    <option value="1"></option>
                     <% clase.forEach(function(c) { %>
                         <option value=<%= c.clase_marca %>><%= c.clase_marca %></option>
                     <% }); %>
                 </select>
                 <label class="option-filter-title">Teléfono</label>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio">
+                    <input class="form-check-input" type="checkbox">
                     <label class="form-check-label">
                       Disponible
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio">
-                    <label class="form-check-label">
-                      No dispoible
                     </label>
                 </div>
                 <label class="option-filter-title">Correo</label>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio">
+                    <input class="form-check-input" type="checkbox">
                     <label class="form-check-label">
                       Disponible
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="radio">
-                    <label class="form-check-label">
-                      No dispoible
                     </label>
                 </div>
             </div>
