--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -14,10 +14,26 @@
             <p>cabeza de página</p>
         </div>
         <div class="option">
-            <div class="form-group">
-                <form action="/dashboard" method="GET" id="size">
+            <ul class="pagination">
+                <li class="page-item disabled">
+                    <a class="page-link" href="#" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+            
+                <li class="page-item" disabled>
+                    <a class="page-link" href="#" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="content">
+            <div class="filter">
+                <form action="/dashboard" method="GET" id="filter">
+                    <p>Filtros</p>
                     <label>Número de filas</label>
-                    <select class="form-select" name="Size" onchange="changeAction(this.value);">
+                    <select class="form-select" name="Size" onchange="changeAction();">
                         <% if(size == 50) { %>
                             <option value="50" selected>50</option>
                         <% }else{ %>
@@ -39,57 +55,58 @@
                             <option value="500">500</option>
                         <% } %>
                     </select>
-                </form>
-            </div>
-            <ul class="pagination">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-            
-                <li class="page-item" disabled>
-                    <a class="page-link" href="#" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class="content">
-            <div class="filter">
-                <form action="/dashboard" method="GET" id="filter">
-                    <p>Filtros</p>
                     <label class="option-filter-title">Situación de la marca</label>
-                    <select class="form-select" name="Situacion">
+                    <select class="form-select" name="Situacion">  
                         <option value="null"></option>
                         <% situacion.forEach(function(s) { %>
-                            <option value=<%= s.situacion_marca %>><%= s.situacion_marca %></option>
+                            <% if(filter.situacion && filter.situacion == s.situacion_marca) { %>
+                                <option selected value=<%= s.situacion_marca %> ><%= s.situacion_marca %></option>
+                            <% }else{ %>
+                                <option value=<%= s.situacion_marca %>><%= s.situacion_marca %></option>
+                            <% } %>
                         <% }); %>
                     </select>
                     <label class="option-filter-title">Número de Clasificación</label>
                     <select class="form-select" name="Clasificacion">
                         <option value="null"></option>
                         <% clasificacion.forEach(function(c) { %>
-                            <option value=<%= c.clasificacion_niza %>><%= c.clasificacion_niza %></option>
+                            <% if(filter.clasificacion && filter.clasificacion == c.clasificacion_niza) { %>
+                                <option selected value=<%= c.clasificacion_niza %>><%= c.clasificacion_niza %></option>
+                            <% }else{ %>
+                                <option value=<%= c.clasificacion_niza %>><%= c.clasificacion_niza %></option>
+                            <% } %>                            
                         <% }); %>
                     </select>
                     <label class="option-filter-title">Número de clase</label>
                     <select class="form-select" name="Clase">
                         <option value="null"></option>
                         <% clase.forEach(function(c) { %>
-                            <option value=<%= c.clase_marca %>><%= c.clase_marca %></option>
+                            <% if(filter.clase && filter.clase == c.clase_marca) { %>
+                                <option selected value=<%= c.clase_marca %>><%= c.clase_marca %></option>
+                            <% }else{ %>
+                                <option value=<%= c.clase_marca %>><%= c.clase_marca %></option>
+                            <% } %>  
+                            
                         <% }); %>
                     </select>
                     <label class="option-filter-title">Teléfono</label>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="Telefono">
+                        <% if(filter.telefono && filter.telefono == "on") { %>
+                            <input class="form-check-input" type="checkbox" name="Telefono" checked>
+                        <% }else{ %>
+                            <input class="form-check-input" type="checkbox" name="Telefono">
+                        <% } %> 
                         <label class="form-check-label">
                         Disponible
                         </label>
                     </div>
                     <label class="option-filter-title">Correo</label>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" name="Correo">
+                        <% if(filter.correo && filter.correo == "on") { %>
+                            <input class="form-check-input" type="checkbox" name="Correo" checked>
+                        <% }else{ %>
+                            <input class="form-check-input" type="checkbox" name="Correo">
+                        <% } %> 
                         <label class="form-check-label">
                         Disponible
                         </label>
