Se agrego paginación del dashboard que respeta los filtros aplicados

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,17 +15,32 @@
         </div>
         <div class="option">
             <ul class="pagination">
-                <li class="page-item disabled">
-                    <a class="page-link" href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-            
-                <li class="page-item" disabled>
-                    <a class="page-link" href="#" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
+                <% if(page == 1) { %>
+                    <li class="page-item disabled">
+                        <a class="page-link" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                <% }else{ %>
+                    <li class="page-item">
+                        <a class="page-link" aria-label="Previous" id="pagePrevious" onclick="pagePrevious();">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                <% } %>
+                <% if(page == lastpage) { %>
+                    <li class="page-item disabled">
+                        <a class="page-link" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                <% }else{ %>
+                    <li class="page-item">
+                        <a class="page-link" aria-label="Next" id="pageNext" onclick="pageNext();">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                <% } %>
             </ul>
         </div>
         <div class="content">
