--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.6.5/css/buttons.dataTables.min.css">    
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap5.min.css">
+
     <link href="/css/dashboard.css" rel="stylesheet" type="text/css">
     <title>Brandium</title>
 </head>
@@ -13,68 +17,10 @@
         <div class="header">
             <p>cabeza de página</p>
         </div>
-        <div class="option">
-            <ul class="pagination">
-                <% if(page == 1) { %>
-                    <li class="page-item disabled">
-                        <a class="page-link" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                    </li>
-                <% }else{ %>
-                    <li class="page-item">
-                        <a class="page-link" aria-label="Previous" id="pagePrevious" onclick="pagePrevious();">
-                            <span aria-hidden="true">&laquo;</span>
-                        </a>
-                    </li>
-                <% } %>
-                <% if((size*page) > count) { %>
-                    <p><%= ((size*page) - size) +1 %> - <%= count %>  de <%= count %></p>
-                <% }else{ %>
-                    <p><%= ((size*page) - size) +1 %> - <%= size*page %>  de <%= count %></p>
-                <% } %>
-                <% if(page == lastpage) { %>
-                    <li class="page-item disabled">
-                        <a class="page-link" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                    </li>
-                <% }else{ %>
-                    <li class="page-item">
-                        <a class="page-link" aria-label="Next" id="pageNext" onclick="pageNext();">
-                            <span aria-hidden="true">&raquo;</span>
-                        </a>
-                    </li>
-                <% } %>
-            </ul>
-        </div>
         <div class="content">
             <div class="filter">
                 <form action="/dashboard" method="GET" id="filter">
                     <p>Filtros</p>
-                    <label>Número de filas</label>
-                    <select class="form-select" name="Size" onchange="changeAction();">
-                        <% if(size == 50) { %>
-                            <option value="50" selected>50</option>
-                        <% }else{ %>
-                            <option value="50">50</option>
-                        <% } %>
-                        <% if(size == 100) { %>
-                            <option value="100" selected>100</option>
-                        <% }else{ %>
-                            <option value="100">100</option>
-                        <% } %>
-                        <% if(size == 250) { %>
-                            <option value="250" selected>250</option>
-                        <% }else{ %>
-                            <option value="250">250</option>
-                        <% } %>
-                        <% if(size == 500) { %>
-                            <option value="500" selected>500</option>
-                        <% }else{ %>
-                            <option value="500">500</option>
-                        <% } %>
-                    </select>
                     <label class="option-filter-title">Situación de la marca</label>
                     <select class="form-select" name="Situacion">  
                         <option value="null"></option>
@@ -134,7 +80,7 @@
                     <button type="submit" class="btn btn-primary">Filtrar</button>
                 </form>
             </div>
-            <table class="table">
+            <table class="table" id="marcas" class="table table-striped">
                 <thead>
                   <tr>
                     <th scope="col">Número de solicitud</th>
@@ -204,12 +150,55 @@
         </div>
     </div>
 
-    <script>
-        
-    </script>
-    <script  type="text/javascript" src="/js/dashboard.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <!-- jquery y bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>   
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
+    <!-- datatables con bootstrap -->
+    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap5.min.js"></script>
+
+    <!-- Para usar los botones -->
+    <script src="https://cdn.datatables.net/buttons/1.6.5/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.6.5/js/buttons.html5.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+
+    <script>
+        $(document).ready( function () {
+        $('#marcas').DataTable({
+            "responsive": true,
+            "paging": true,
+            "lengthChange": true,
+            "lengthMenu": [ [50, 100, 250, 500, -1], [50, 100, 250, 500, "All"] ],
+            "pageLength": 50,
+            searching: false,
+            ordering:  false,
+            "language": {
+                "info":           "Mostrando _START_ a _END_ de _TOTAL_ registros",
+                "infoEmpty":      "Mostrando 0 a 0 de 0 registros",
+                "lengthMenu":     "Número de registros _MENU_",
+                "paginate": {
+                    "first":      "Inicio",
+                    "last":       "Fin",
+                    "next":       "Siguiente",
+                    "previous":   "Anterior"
+                }
+            },
+            dom: "Bliptip",
+            buttons:[
+            {
+                extend: "excel",
+                text:'Exportar a Excel',
+                className:'btn btn-outline-success',
+            }
+            ]
+        });
+        } );
+    </script>
+
+    <script  type="text/javascript" src="/js/dashboard.js"></script>
 </body>
 </html>
