Corrección en el nombre de las columnas

--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -100,17 +100,17 @@
                     <th scope="col">Nombre del solicitante</th>
                     <th scope="col">Teléfono del solicitante</th>
                     <th scope="col">Correo del solicitante</th>
-                    <th scope="col">país del solicitante</th>
-                    <th scope="col">municipio del solicitante</th>
-                    <th scope="col">dirección del solicitante</th>
-                    <th scope="col">código postal del solicitante</th>
+                    <th scope="col">País del solicitante</th>
+                    <th scope="col">Municipio del solicitante</th>
+                    <th scope="col">Dirección del solicitante</th>
+                    <th scope="col">Código postal del solicitante</th>
                     <th scope="col">Nombre del representante</th>
                     <th scope="col">Teléfono del representante</th>
                     <th scope="col">Correo del representante</th>
-                    <th scope="col">país del representante</th>
-                    <th scope="col">municipio del representante</th>
-                    <th scope="col">dirección del representante</th>
-                    <th scope="col">código postal del representante</th>
+                    <th scope="col">País del representante</th>
+                    <th scope="col">Municipio del representante</th>
+                    <th scope="col">Dirección del representante</th>
+                    <th scope="col">Código postal del representante</th>
                   </tr>
                 </thead>
                 <tbody>
